--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,40 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  font-family: sans-serif;
+  color: #333;
+}
+
+.container {
+  width: 600px;
+  background-color: #f7f7f7;
+  padding: 25px 100px;
+  border-radius: 7px;
+}
+
+.steps {
+  display: flex;
+  justify-content: space-between;
+}
+
+.steps .step {
+  height: 40px;
+  aspect-ratio: 1;
+  background-color: #e7e7e7;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  font-size: 18px;
+}
+
+.steps .step.active {
+  background-color: #7950f2;
+  color: #fff;
+}
