--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
   background-color: #f7f7f7;
   padding: 25px 100px;
   border-radius: 7px;
+  position: relative;
 }
 
 .steps {
@@ -39,4 +40,45 @@ body {
 .steps .step.active {
   background-color: #7950f2;
   color: #fff;
+}
+
+.message {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  margin: 40px 0;
+  display: grid;
+  place-items: center;
+}
+
+.actionBtns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 100px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #7950f2;
+  color: #fff;
+  transition: filter 0.3s;
+}
+
+.btn:hover {
+  filter: brightness(95%);
+}
+
+.close-btn {
+  position: absolute;
+  top: -50px;
+  right: 0;
+  border: none;
+  cursor: pointer;
+  font-size: 40px;
+  color: inherit;
+  background: none;
 }
