--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ body {
   background-color: #f7f7f7;
   padding: 25px 100px;
   border-radius: 7px;
-  position: relative;
 }
 
 .steps {
@@ -74,8 +73,8 @@ body {
 
 .close-btn {
   position: absolute;
-  top: -50px;
-  right: 0;
+  top: 16px;
+  right: 16px;
   border: none;
   cursor: pointer;
   font-size: 40px;
